'Display Pivot' segfaults blender (Rigid Body Constraint + 3dview) #32177

Closed
opened 2012-07-25 02:58:52 +02:00 by Dalai Felinto · 3 comments

%%%How to reproduce it:

  1. select the default cube
  2. add a 'Rigid Body Joint' constraint
  3. set Display Pivot
  4. select the object (left clicking on it, select all doesn't trigger the bug)
    Boooom

(or open attached file and select Display Pivot)

First noticed in old files (fro 256) that were working but break in trunk as soon as I select an object that has display pivot enabled in a rigid body constraint.
Bracktrace (OSX, Blender > 2.63 - trunk)

program received signal EXC_BAD_ACCESS, Could not access memory.
Reason: KERN_INVALID_ADDRESS at address: 0x0000000000000000
0x000000010012f698 in view3d_cached_text_draw_add (co=0x7fff5fbd7bec, str=0x102fa929a "px", xoffs=0, flag=4, col=0x0) at drawobject.c:852
852 vos->col.pack = *((int *)col);
(gdb) bt

  • 0 0x000000010012f698 in view3d_cached_text_draw_add (co=0x7fff5fbd7bec, str=0x102fa929a "px", xoffs=0, flag=4, col=0x0) at drawobject.c:852
  • 1 0x0000000100149150 in draw_rigid_body_pivot (data=0x112c92608, ob_wire_col=0x0) at drawobject.c:6470
  • 2 0x000000010014b4dc in draw_object (scene=0x10a0b2838, ar=0x109c5f908, v3d=0x109c5fe28, base=0x109c738c8, dflag=3) at drawobject.c:7070
  • 3 0x000000010019d5aa in view3d_opengl_select (vc=0x7fff5fbff4f0, buffer=0x7fff5fbd83a4, bufsize=10000, input=0x7fff5fbd8298) at view3d_view.c:1264
  • 4 0x00000001001883a7 in mixed_bones_object_selectbuffer (vc=0x7fff5fbff4f0, buffer=0x7fff5fbd83a4, mval=0x109c499f4) at view3d_select.c:1134
  • 5 0x000000010018935b in mouse_select (C=0x108b230c8, mval=0x109c499f4, extend=0, deselect=0, toggle=0, obcenter=0, enumerate=0) at view3d_select.c:1372
  • 6 0x000000010018bdae in view3d_select_invoke (C=0x108b230c8, op=0x109c7db18, event=0x109c499d8) at view3d_select.c:2141
  • 7 0x000000010001116b in wm_operator_invoke (C=0x108b230c8, ot=0x10b0f7c68, event=0x109c499d8, properties=0x11324cf38, reports=0x0, poll_only=0) at wm_event_system.c:855
  • 8 0x0000000100012cf6 in wm_handler_operator_call (C=0x108b230c8, handlers=0x109c5fa10, handler=0x109c820b8, event=0x109c499d8, properties=0x11324cf38) at wm_event_system.c:1450
  • 9 0x000000010001361c in wm_handlers_do (C=0x108b230c8, event=0x109c499d8, handlers=0x109c5fa10) at wm_event_system.c:1701
  • 10 0x000000010001466b in wm_event_do_handlers (C=0x108b230c8) at wm_event_system.c:2058
  • 11 0x000000010000ac44 in WM_main (C=0x108b230c8) at wm.c:366

12 0x0000000100009fcb in main (argc=1, argv=0x7fff5fbffa10) at creator.c:1392

%%%

%%%How to reproduce it: 1) select the default cube 2) add a 'Rigid Body Joint' constraint 3) set Display Pivot 4) select the object (left clicking on it, select all doesn't trigger the bug) *Boooom* (or open attached file and select Display Pivot) First noticed in old files (fro 256) that were working but break in trunk as soon as I select an object that has display pivot enabled in a rigid body constraint. Bracktrace (OSX, Blender > 2.63 - trunk) program received signal EXC_BAD_ACCESS, Could not access memory. Reason: KERN_INVALID_ADDRESS at address: 0x0000000000000000 0x000000010012f698 in view3d_cached_text_draw_add (co=0x7fff5fbd7bec, str=0x102fa929a "px", xoffs=0, flag=4, col=0x0) at drawobject.c:852 852 vos->col.pack = *((int *)col); (gdb) bt - 0 0x000000010012f698 in view3d_cached_text_draw_add (co=0x7fff5fbd7bec, str=0x102fa929a "px", xoffs=0, flag=4, col=0x0) at drawobject.c:852 - 1 0x0000000100149150 in draw_rigid_body_pivot (data=0x112c92608, ob_wire_col=0x0) at drawobject.c:6470 - 2 0x000000010014b4dc in draw_object (scene=0x10a0b2838, ar=0x109c5f908, v3d=0x109c5fe28, base=0x109c738c8, dflag=3) at drawobject.c:7070 - 3 0x000000010019d5aa in view3d_opengl_select (vc=0x7fff5fbff4f0, buffer=0x7fff5fbd83a4, bufsize=10000, input=0x7fff5fbd8298) at view3d_view.c:1264 - 4 0x00000001001883a7 in mixed_bones_object_selectbuffer (vc=0x7fff5fbff4f0, buffer=0x7fff5fbd83a4, mval=0x109c499f4) at view3d_select.c:1134 - 5 0x000000010018935b in mouse_select (C=0x108b230c8, mval=0x109c499f4, extend=0, deselect=0, toggle=0, obcenter=0, enumerate=0) at view3d_select.c:1372 - 6 0x000000010018bdae in view3d_select_invoke (C=0x108b230c8, op=0x109c7db18, event=0x109c499d8) at view3d_select.c:2141 - 7 0x000000010001116b in wm_operator_invoke (C=0x108b230c8, ot=0x10b0f7c68, event=0x109c499d8, properties=0x11324cf38, reports=0x0, poll_only=0) at wm_event_system.c:855 - 8 0x0000000100012cf6 in wm_handler_operator_call (C=0x108b230c8, handlers=0x109c5fa10, handler=0x109c820b8, event=0x109c499d8, properties=0x11324cf38) at wm_event_system.c:1450 - 9 0x000000010001361c in wm_handlers_do (C=0x108b230c8, event=0x109c499d8, handlers=0x109c5fa10) at wm_event_system.c:1701 - 10 0x000000010001466b in wm_event_do_handlers (C=0x108b230c8) at wm_event_system.c:2058 - 11 0x000000010000ac44 in WM_main (C=0x108b230c8) at wm.c:366 # 12 0x0000000100009fcb in main (argc=1, argv=0x7fff5fbffa10) at creator.c:1392 %%%
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in r49202. Thanks for the report! :)%%%

%%%Fixed in r49202. Thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32177
No description provided.