Fix [#32177] 'Display Pivot' segfaults blender (Rigid Body Constraint + 3dview)

draw_rigid_body_pivot() didn't check it could actualy use the given ob_wire_col...

Also silenced a compiler warning, and removed (replaced) a potential dengerous pointer cast (char *[4] -> int* is not safe on 64bit machines!).